<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_reg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/user_name" />
    <EditText
        android:id="@+id/password_reg_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/user_password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/password_reg_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/user_password_second"
        android:inputType="textPassword" />
    <CheckBox
        android:id="@+id/cbAlwaysUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/always_use_this_account"
        android:checked="true"/>
</LinearLayout>