<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatInformationActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_300"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:elevation="4dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:onClick="onCloseInfo"
            tools:ignore="OnClick"
            android:background="@color/purple_300"/>

        <TextView
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="viewStart"
            android:text="@string/about_chat"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/chat_name"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvChatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="TextView"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|right"
            android:onClick="onRefactorName"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:background="@color/purple_300"

            tools:ignore="OnClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/description"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="TextView"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|right"
            android:onClick="onRefactorDescription"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:background="@color/purple_300"
            tools:ignore="OnClick" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/tvMemberCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:textSize="20sp"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvMessagesCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:text="TextView"
        android:textSize="20sp" />


</LinearLayout>